Add ChatModels and define message types.

--- a/llm-workshop-parte-1.ipynb
+++ b/llm-workshop-parte-1.ipynb
@@ -238,6 +238,73 @@
     "for o in output.generations:\n",
     "    print(o[0].text, end='')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "138919ac",
+   "metadata": {},
+   "source": [
+    "## ChatModels: GPT-3.5-Turbo e GPT-4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "170974db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.schema import(\n",
+    "    AIMessage,\n",
+    "    HumanMessage,\n",
+    "    SystemMessage\n",
+    ")\n",
+    "\n",
+    "from langchain.chat_models import ChatOpenAI"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cca0770d",
+   "metadata": {},
+   "source": [
+    "- AIMESSAGE - Helps define the assistant's behavior.\n",
+    "- HUMANMESSAGE - What do we ask the assistant\n",
+    "- SYSTEMMESSAGE - Helps store previous responses."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "780f2d2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chat = ChatOpenAI(model_name='gpt-3.5-turbo', temperature=0.5, max_tokens=1024)\n",
+    "messages = [\n",
+    "    SystemMessage(content='Você é um especialista em machine learning que responde tudo em português.'),\n",
+    "    HumanMessage(content='explique em um parágrafo o que é machine learning.')\n",
+    "]\n",
+    "output = chat(messages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "784c864d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Machine learning, ou aprendizado de máquina, é um campo da inteligência artificial que se baseia na capacidade dos computadores de aprender e melhorar a partir de dados, sem serem explicitamente programados. Por meio de algoritmos e modelos estatísticos, o machine learning permite que as máquinas analisem grandes quantidades de dados e identifiquem padrões, tomando decisões e realizando tarefas de forma autônoma. Essa abordagem é amplamente utilizada em diversas áreas, como reconhecimento de padrões, previsão de resultados, classificação de dados e recomendação de produtos, entre outros.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(output.content)"
+   ]
   }
  ],
  "metadata": {
