Add prompt templates.

--- a/llm-workshop-parte-1.ipynb
+++ b/llm-workshop-parte-1.ipynb
@@ -305,6 +305,77 @@
    "source": [
     "print(output.content)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84156a26",
+   "metadata": {},
+   "source": [
+    "## Prompt Templates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c429cfa7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.prompts import PromptTemplate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5ed9ba1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input_variables=['idioma', 'virus'] template='Você é um virologista experiente.\\nEscreva algumas frases sobre o sequinte {virus} em {idioma}.'\n"
+     ]
+    }
+   ],
+   "source": [
+    "template = \"\"\"Você é um virologista experiente.\n",
+    "Escreva algumas frases sobre o sequinte {virus} em {idioma}.\"\"\"\n",
+    "\n",
+    "prompt = PromptTemplate(\n",
+    "    input_variables=['virus', 'idioma'],\n",
+    "    template=template\n",
+    ")\n",
+    "print(prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b5dc2a78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "1. HIV is a virus that can cause serious health complications if left untreated.\n",
+      "2. Early detection and treatment of HIV can help reduce the risk of further health complications.\n",
+      "3. Understanding how HIV is transmitted is important for preventing the spread of infection.\n",
+      "4. HIV is a manageable condition with the right combination of medications.\n",
+      "5. Effective HIV prevention strategies such as using condoms and practicing safe sex are essential for reducing the risk of transmission.\n",
+      "6. Educating yourself and your community about HIV can help reduce stigma and create an environment of acceptance.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain.llms import OpenAI\n",
+    "llm = OpenAI(model_name='text-davinci-003', temperature=0.7)\n",
+    "output = llm(prompt.format(virus='HIV', idioma='Inglês'))\n",
+    "print(output)"
+   ]
   }
  ],
  "metadata": {
