Add code for Simple Chains.

--- a/llm-workshop-parte-1.ipynb
+++ b/llm-workshop-parte-1.ipynb
@@ -376,6 +376,60 @@
     "output = llm(prompt.format(virus='HIV', idioma='Inglês'))\n",
     "print(output)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eab6dca9",
+   "metadata": {},
+   "source": [
+    "## Simple Chains"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "dbfc5213",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.chains import LLMChain\n",
+    "\n",
+    "llm = ChatOpenAI(model_name='gpt-3.5-turbo', temperature=0.5)\n",
+    "\n",
+    "template = \"\"\"Você é um virologista experiente.\n",
+    "Escreva um resumo sobre o sequinte {virus} em {idioma}.\"\"\"\n",
+    "\n",
+    "prompt = PromptTemplate(\n",
+    "    input_variables=['virus', 'idioma'],\n",
+    "    template=template\n",
+    ")\n",
+    "\n",
+    "chain = LLMChain(llm=llm, prompt=prompt)\n",
+    "output = chain.run({'virus': 'HIV', 'idioma': 'english'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "09ed058c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'HIV, or Human Immunodeficiency Virus, is a viral infection that attacks the immune system, specifically the CD4 cells (T cells), which play a crucial role in fighting off infections. If left untreated, HIV can lead to the development of acquired immunodeficiency syndrome (AIDS).\\n\\nHIV is primarily transmitted through unprotected sexual intercourse, sharing contaminated needles, or from an infected mother to her child during childbirth or breastfeeding. It can also be transmitted through blood transfusions, though this is now rare due to improved screening techniques.\\n\\nUpon infection, individuals may experience flu-like symptoms, such as fever, fatigue, and swollen lymph nodes. However, these symptoms can be mild and easily overlooked. As the virus progresses, it weakens the immune system, making the individual more susceptible to various infections and diseases.\\n\\nThere is currently no cure for HIV, but it can be managed through antiretroviral therapy (ART). ART involves a combination of medications that suppress the replication of the virus, allowing the immune system to recover and function effectively. With proper treatment, people living with HIV can lead long and healthy lives.\\n\\nPrevention is crucial in controlling the spread of HIV. This includes practicing safe sex by using condoms, avoiding sharing needles, and getting tested regularly, especially if engaging in high-risk behaviors. Additionally, HIV can be prevented through pre-exposure prophylaxis (PrEP), a medication taken by individuals at high risk of contracting the virus.\\n\\nIn conclusion, HIV is a chronic viral infection that affects the immune system and can lead to AIDS if left untreated. While there is currently no cure, effective treatment options exist that can allow individuals to live fulfilling lives. Prevention measures, such as safe sex practices and regular testing, are essential in reducing the transmission of HIV.'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output"
+   ]
   }
  ],
  "metadata": {
