Add sequential chains.

--- a/llm-workshop-parte-1.ipynb
+++ b/llm-workshop-parte-1.ipynb
@@ -430,6 +430,84 @@
    "source": [
     "output"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d04c9392",
+   "metadata": {},
+   "source": [
+    "## Sequential Chains"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c738d6fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new SimpleSequentialChain chain...\u001b[0m\n",
+      "\u001b[36;1m\u001b[1;3m\n",
+      "\n",
+      "def softmax(x): \n",
+      "    # x is a vector/list of inputs \n",
+      "    # compute the exponential of each element \n",
+      "    exps = [np.exp(i) for i in x] \n",
+      "    # compute the sum of all exponentials \n",
+      "    sum_of_exps = np.sum(exps) \n",
+      "    # compute the softmax \n",
+      "    softmax = [j/sum_of_exps for j in exps] \n",
+      "    # return the softmax \n",
+      "    return softmax\u001b[0m\n",
+      "\u001b[33;1m\u001b[1;3mA função softmax é uma função de ativação que é comumente usada na camada de saída de uma rede neural quando se trata de classificação multiclasse.\n",
+      "A função recebe um vetor ou lista de valores de entrada e realiza as seguintes etapas para calcular a saída softmax:\n",
+      "\n",
+      "1. Para cada elemento de entrada x, a função calcula a exponencial de x usando a função np.exp(i), onde np é uma biblioteca de NumPy.\n",
+      "2. Esses valores exponenciais são armazenados em uma lista chamada \"exps\".\n",
+      "3. Em seguida, a função calcula a soma de todos os elementos da lista \"exps\" usando a função np.sum(exps) e armazena o resultado na variável \"sum_of_exps\".\n",
+      "4. Agora, para calcular a saída softmax para cada elemento, a função divide cada exponencial pela soma dos exponenciais. Isso é feito para normalizar os valores e garantir que a soma das saídas seja 1.\n",
+      "5. Esses valores normalizados são então armazenados em uma nova lista chamada \"softmax\".\n",
+      "6. Por fim, a função retorna a lista \"softmax\", que contém as saídas softmax para cada elemento de entrada.\n",
+      "\n",
+      "Em resumo, a função softmax converte um vetor de valores em uma distribution de probabilidade usando a função exponencial softmax.\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.llms import OpenAI\n",
+    "from langchain.chains import LLMChain, SimpleSequentialChain\n",
+    "\n",
+    "llm1 = OpenAI(model_name='text-davinci-003', temperature=0.7, max_tokens=1024)\n",
+    "prompt1 = PromptTemplate(\n",
+    "    input_variables=['conceito'],\n",
+    "    template=\"\"\"Você é um cientista experiente e programador Python.\n",
+    "    Escreva uma função que implementa o conceito de {conceito}.\"\"\"\n",
+    ")\n",
+    "\n",
+    "chain1 = LLMChain(llm=llm1, prompt=prompt1)\n",
+    "\n",
+    "#--- segunda chain ----\n",
+    "\n",
+    "llm2 = ChatOpenAI(model_name='gpt-3.5-turbo', temperature=1.2)\n",
+    "prompt2 = PromptTemplate(\n",
+    "    input_variables=['function'],\n",
+    "    template=\"\"\"Dada a função {function} Python, descreva como funciona da forma mais detalhada possível.\"\"\"\n",
+    ")\n",
+    "\n",
+    "chain2 = LLMChain(llm=llm2, prompt=prompt2)\n",
+    "\n",
+    "overall_chain = SimpleSequentialChain(chains=[chain1, chain2], verbose=True)\n",
+    "output = overall_chain.run(\"softmax\")"
+   ]
   }
  ],
  "metadata": {
