Add LangChain Agents and experimental dependencies.

--- a/llm-workshop-parte-1.ipynb
+++ b/llm-workshop-parte-1.ipynb
@@ -508,6 +508,65 @@
     "overall_chain = SimpleSequentialChain(chains=[chain1, chain2], verbose=True)\n",
     "output = overall_chain.run(\"softmax\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fe2d269",
+   "metadata": {},
+   "source": [
+    "## LangChain Agents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a2e820a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "146306.05007233328"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# exemplo exponenciação\n",
+    "\n",
+    "5.1 ** 7.3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cb16758",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_experimental.agents.agent_toolkits import create_python_agent\n",
+    "from langchain_experimental.tools.python.tool import PythonAstREPLTool\n",
+    "from langchain.llms import OpenAI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8a2e7c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm = OpenAI(temperature=0)\n",
+    "agent_executor = create_python_agent(\n",
+    "    llm=llm,\n",
+    "    tool=PythonAstREPLTool(),\n",
+    "    verbose=True\n",
+    ")\n",
+    "agent_executor.run('qual a resposta para 5.1 elevado à potência de 7.3')"
+   ]
   }
  ],
  "metadata": {
