Added sptting and embedding to the file.

--- a/llm-workshop-parte-1.ipynb
+++ b/llm-workshop-parte-1.ipynb
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "0cb16758",
    "metadata": {},
    "outputs": [],
@@ -554,10 +554,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "f8a2e7c3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3m I can use the power operator to raise 5.1 to the power of 7.3\n",
+      "Action: python_repl_ast\n",
+      "Action Input: 5.1 ** 7.3\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3m146306.05007233328\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3m I now know the final answer\n",
+      "Final Answer: 146306.05007233328\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'146306.05007233328'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "llm = OpenAI(temperature=0)\n",
     "agent_executor = create_python_agent(\n",
@@ -566,6 +594,71 @@
     "    verbose=True\n",
     ")\n",
     "agent_executor.run('qual a resposta para 5.1 elevado à potência de 7.3')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f4a07c94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1559776268.6285\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import factorial; print(f\"{round(factorial(20)**0.5, 4)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "873803a3",
+   "metadata": {},
+   "source": [
+    "## Splitting e Embedding de texto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "23d6a233",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
+    "\n",
+    "with open('docs/CLT.txt', 'r', encoding='utf-8') as f:\n",
+    "   clt = f.read()\n",
+    "\n",
+    "text_splitter = RecursiveCharacterTextSplitter(\n",
+    "    chunk_size=1000,\n",
+    "    chunk_overlap=10,\n",
+    "    length_function=len\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d5d8814a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chunks = text_splitter.create_documents([clt])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f629715",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chunks[0]"
    ]
   }
  ],
