Sending the chunchs to the pinecone.

--- a/llm-workshop-parte-1.ipynb
+++ b/llm-workshop-parte-1.ipynb
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "id": "23d6a233",
    "metadata": {},
    "outputs": [],
@@ -635,7 +635,7 @@
     "   clt = f.read()\n",
     "\n",
     "text_splitter = RecursiveCharacterTextSplitter(\n",
-    "    chunk_size=1000,\n",
+    "    chunk_size=500,\n",
     "    chunk_overlap=10,\n",
     "    length_function=len\n",
     ")"
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "id": "d5d8814a",
    "metadata": {},
    "outputs": [],
@@ -653,12 +653,303 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "9f629715",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Document(page_content='CLT E A REFORMA TRABALHISTA: EVOLUÇÃO\\n                                     NAS RELAÇÕES DE TRABALHO\\n\\n                                                                                                Eliezer de Queiroz Noleto1')"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chunks[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "f7ff685e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Document(page_content='Ao falarmos sobre a Consolidação das Leis do Trabalho (CLT), somos reme-\\n          tidos ao período conhecido como Era Vargas. Editada no ano de 1943, a CLT resultou\\n          da coletânea de inúmeras leis esparsas então existentes que disciplinavam aspectos\\n          sobre direito individual do trabalho, direito coletivo, fiscalização do trabalho, direito\\n          processual do trabalho, além de legislações específicas de determinadas profissões.')"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chunks[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "36f03b77",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Document(page_content='7\\n\\x0c             os quais faziam jornadas diárias extensas e exaustivas, sem direito a descanso\\n             semanal e férias. Trabalhava-se, muitas vezes, em troca de alimento e moradia.\\n             Não havia idade mínima para a contratação, uma vez que não era raro encon-\\n             trar crianças com cerca de oito anos ocupando funções como se adultos fossem.')"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chunks[10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "f8a9f430",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'majoritário dos legisladores, o Parlamento aprovou a chamada Reforma Tra-\\nbalhista (Lei nº 13.467/2017), a modificação mais profunda na legislação traba-\\nlhista desde a edição da própria CLT. Entendeu-se que a legislação não havia\\nacompanhado a evolução vivenciada nas relações de trabalho. Isso teria se\\ndado, por exemplo, em relação às novas formas de trabalho que surgiram com\\nas inovações tecnológicas ou em virtude da atuação mais presente das enti-\\ndades de classe, condições que teriam abrandado a hipossuficiência do traba-\\nlhador. Assim, a intenção manifesta do Poder Legislativo com a aprovação da\\nLei nº 13.467/2017 foi a de atualizar a CLT aos novos tempos, promovendo-se\\numa série de mudanças, algumas pontuais, outras de ordem mais geral. Cabe,\\nnesta oportunidade, destacar as principais modificações.\\n       A nova lei incluiu um capítulo no Título II da CLT (Capítulo II-A) para dis-\\nciplinar o teletrabalho, conceituado como “a prestação de serviços preponde-'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chunks[10].page_content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "d874191d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1167"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(chunks)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a27d297",
+   "metadata": {},
+   "source": [
+    "### Tikentoken"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "6657a43c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "chunks[0]"
+    "def embedding_cost(texts):\n",
+    "    import tiktoken\n",
+    "    enc = tiktoken.encoding_for_model('text-embedding-ada-002')\n",
+    "    total_tokens = sum([len(enc.encode(page.page_content)) for page in texts])\n",
+    "    print(f'Total de tokens: {total_tokens}')\n",
+    "    print(f'Custo de Embedding em USD: {total_tokens / 1000 * 0.0001:.6f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "7f893044",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total de tokens: 256157\n",
+      "Custo de Embedding em USD: 0.025616\n"
+     ]
+    }
+   ],
+   "source": [
+    "embedding_cost(chunks)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72c6123a",
+   "metadata": {},
+   "source": [
+    "## Creating embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "7a46d72a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.embeddings import OpenAIEmbeddings\n",
+    "embeddings = OpenAIEmbeddings()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "0ab414e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vector = embeddings.embed_query(chunks[0].page_content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d93e0557",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#vector"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c512039e",
+   "metadata": {},
+   "source": [
+    "### PINECONE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "cc58bfc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pinecone\n",
+    "from langchain.vectorstores import Pinecone\n",
+    "\n",
+    "pinecone.init(api_key=os.environ.get('PINECONE_API_KEY'), environment=os.environ.get('PINECONE_ENV'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44fb72bc",
+   "metadata": {},
+   "source": [
+    "* Deleting all pinecone indexes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "9f10034e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feito!\n"
+     ]
+    }
+   ],
+   "source": [
+    "indexes = pinecone.list_indexes()\n",
+    "for i in indexes:\n",
+    "    pinecone.delete_index(i)\n",
+    "    print('Feito!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c55deb40",
+   "metadata": {},
+   "source": [
+    "* Creating the index in pinecone"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0f14a3d",
+   "metadata": {},
+   "source": [
+    "* dimension - Dimension that chatgpt supports.\n",
+    "* cosine - singularity algorithm."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "9e7b926f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feito!\n"
+     ]
+    }
+   ],
+   "source": [
+    "index_name = 'linuxtips'\n",
+    "if index_name not in pinecone.list_indexes():\n",
+    "    pinecone.create_index(index_name, dimension=1536, metric='cosine')\n",
+    "    print('Feito!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "363beab5",
+   "metadata": {},
+   "source": [
+    "* Sending the vectors to pinecone."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56956a98",
+   "metadata": {},
+   "source": [
+    "* Pinecone lets you send 1000 vectors at a time in the free version."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65b8bb04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vector_store = Pinecone.from_documents(chunks, embeddings, index_name=index_name)"
    ]
   }
  ],
